<resources>
    <string name="test1">제목인가</string>
    <string name="test2">내용인가</string>
    <string name="app_name">RROS</string>
    <string name="loading_explaination">Loading...</string>
    <string name="title_home">홈</string>
    <string name="title_search">탐색</string>
    <string name="title_review">리뷰</string>
    <string name="title_more">더 보기</string>

    <string name="normal_user">일반 사용자</string>
    <string name="owner">사업자</string>
    <string name="confirm">확인</string>
    <string name="explain_normal_user">일반 사용자 설명</string>
    <string name="explain_owner_user">사업자 설명</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>


    <string name="id">ID</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_having_account">Already Having an Account?</string>
    <string name="log_in">Log In</string>
    <string name="not_having_account">Not Having an Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="logout">Logout</string>
    <string name="title_activity_search__restaurant">Search_Restaurant</string>
    <string name="action_settings">Settings</string>
    <string name="no_data">데이터가 없습니다</string>
    <string name="skip_string">...</string>
    <string name="search_name">음식점 명</string>

    <string name="search_location">지역 별</string>

    <string name="search_type">분류 별</string>
</resources>
